# RayTracedIR

./: .gitignore  3D_Demo.h  README.md
Full Project/src/cpp scripts/: CMakeLists.txt  camera.cpp  main.cpp  ray.cpp  rayTracer.cpp  reverb old.cpp  reverb.cpp  ringbuffer.cpp  shape.cpp  vectormath.cpp
Wouter/synht_conv_clean/src/cpp_scripts/: CMakeLists.txt  convolution.cpp  main.cpp  oscillator.cpp  sine.cpp  triangle.cpp
Wouter/synht_conv_clean_gpu/src/cpp_scripts/: CMakeLists.txt  convolution.cu  main.cpp  sampleconv.cpp  synth.cpp
Wouter/synth_conv/src/cpp_scripts/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Appeltaart.vcxproj  Appeltaart.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  WoutersClassKaas.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  convolution.cpp  jack_module.cpp  main.cpp  my_file.txt  sine.cpp  square.cpp  synth.cpp
Wouter/synth_conv/src/cpp_scripts/.cmake/api/v1/reply/: cache-v2-8ce3c3391d4dea5f3dbe.json  cmakeFiles-v1-a1bc46a5cd418e775ed5.json  codemodel-v2-24671db2ea8b3c92a58e.json  index-2021-02-22T15-06-25-0836.json  target-ALL_BUILD-MinSizeRel-2983d61cca090f65170d.json  target-Appeltaart-Debug-b1b44a59196cc4d401c5.json  target-Appeltaart-MinSizeRel-b58e0b6ce516922cbaec.json  target-Appeltaart-RelWithDebInfo-5619fef02afacb8c000f.json  target-Appeltaart-Release-25d997e3ec47f4c07cb0.json  target-ZERO_CHECK-Release-8edc0eeb6ceae5575c3e.json  target-portaudio-Debug-8321db0d02f17c469103.json  target-portaudio-MinSizeRel-22b64149a7ed284f9025.json  target-portaudio-RelWithDebInfo-8da61739e8ceea30a10d.json  target-portaudio-Release-3c4c68c0d9dbc15ca91e.json  target-portaudio_static-Debug-5c7a295ac0786bbed834.json  target-portaudio_static-MinSizeRel-4d0f1bfaa77daaa5ab64.json  target-portaudio_static-RelWithDebInfo-31e835979dde16e03644.json  target-portaudio_static-Release-ac05e1af476680bacc89.json  target-uninstall-MinSizeRel-c6ddd7fd04905f998459.json
Wouter/synth_conv/src/cpp_scripts/Appeltaart.dir/Debug/Appeltaart.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.2.tlog  link.write.1.tlog
Wouter/synth_conv/src/cpp_scripts/Appeltaart.dir/Release/Appeltaart.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Wouter/synth_conv/src/cpp_scripts/Debug/: Appeltaart.ilk
Wouter/synth_conv/src/cpp_scripts/cmake/portaudio/: portaudioTargets.cmake
Wouter/synth_conv/src/cpp_scripts/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Wouter/synth_conv/src/cpp_scripts/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  (+2 more)
nino/Delay reverb class/: CMakeLists.txt  main.cpp  port_audio.h  reverb.cpp  reverb.h  ringbuffer.cpp
(+95 files in other folders)
